sync commit