@@ -41,6 +41,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.papermc</groupId>
@@ -52,6 +53,7 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -71,11 +73,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>12</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>8</release>
                     <encoding>UTF-8</encoding>
-                    <source>12</source>
-                    <target>12</target>
                 </configuration>
             </plugin>
             <plugin>
